# router/app.go
@@ -1,54 +1,0 @@
-package router
-
-import (
-	"ginchat/docs"
-	"ginchat/service"
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
-)
-
-func Router() *gin.Engine {
-
-	r := gin.Default()
-
-	//swagger
-	docs.SwaggerInfo.BasePath = ""
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	//静态资源
-	r.Static("/asset", "./asset")
-	r.LoadHTMLGlob("views/**/*")
-
-	//首页
-	r.GET("/", service.GetIndex)
-	r.GET("/index", service.GetIndex)
-	r.GET("/toRegister", service.ToRegister)
-	r.GET("/toChat", service.ToChat)
-	r.GET("/chat", service.Chat)
-	r.POST("/searchFriends", service.SearchFriends)
-
-	//用户模块
-	r.POST("/user/getUserList", service.GetUserList)
-	r.POST("/user/creatUser", service.CreateUser)
-	r.POST("/user/deleteUser", service.DeleteUser)
-	r.POST("/user/updateUser", service.UpdateUser)
-	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
-
-	//发送消息
-	r.GET("/user/sendMsg", service.SendMsg)
-	r.GET("/user/sendUserMsg", service.SendUserMsg)
-
-	//上传模块，文件
-	r.POST("/attach/upload", service.Upload)
-
-	//添加
-	r.POST("/contact/addfriend", service.AddFriend)
-	//r.POST("contact/joinGroup", service.JoinGroup)
-	//创建群
-	r.POST("/contact/createCommunity", service.CreateCommunity)
-
-	//群列表
-	r.POST("contact/loadcommunity", service.LoadCommunity)
-	return r
-}
