# utils/message.go
@@ -1,0 +1,190 @@
+package utils
+
+import (
+	"encoding/json"
+	"fmt"
+	"ginchat/models"
+	"github.com/gorilla/websocket"
+	"gopkg.in/fatih/set.v0"
+	"net"
+	"net/http"
+	"strconv"
+	"sync"
+)
+
+type Node struct {
+	Conn      *websocket.Conn
+	DataQueue chan []byte
+	GroupSets set.Interface
+}
+
+// 映射关系
+var clientMap = make(map[int64]*Node, 0)
+
+// 读写锁
+var rwLocker sync.RWMutex
+
+// 需要 ：发送者ID ，接受者ID ，消息类型，发送的内容，发送类型
+func Chat(writer http.ResponseWriter, request *http.Request) {
+	//1. 获取参数 并 检验 token 等合法性
+	//token := query.Get("token")
+	query := request.URL.Query()
+	Id := query.Get("userId")
+	userId, _ := strconv.ParseInt(Id, 10, 64)
+
+	isvalida := true //checkToke() 待.........
+	conn, err := (&websocket.Upgrader{
+		//token 校验
+		CheckOrigin: func(r *http.Request) bool {
+			return isvalida
+		},
+	}).Upgrade(writer, request, nil)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+
+	//2.获取conn
+	node := &Node{
+		Conn:      conn,
+		DataQueue: make(chan []byte, 50),
+		GroupSets: set.New(set.ThreadSafe),
+	}
+
+	//3. 用户关系
+	//4. userid 跟 node绑定 并加锁
+	rwLocker.Lock()
+	clientMap[userId] = node
+	rwLocker.Unlock()
+
+	//5.完成发送逻辑
+	go sendProc(node)
+
+	//6.完成接受逻辑
+	go recvProc(node)
+	sendMsg(userId, []byte("欢迎进入聊天系统"))
+}
+
+func sendProc(node *Node) {
+	for {
+		select {
+		case data := <-node.DataQueue:
+			fmt.Println("[ws] sendProc >>>>> msg: ", string(data))
+			err := node.Conn.WriteMessage(websocket.TextMessage, data)
+			if err != nil {
+				fmt.Println(err)
+				return
+			}
+		}
+	}
+}
+
+func recvProc(node *Node) {
+	for {
+		_, data, err := node.Conn.ReadMessage()
+		if err != nil {
+			fmt.Println(err)
+			return
+		}
+		dispatch(data)
+		broadMsg(data)
+		fmt.Println("3、[ws] recvProc <<<<<", string(data))
+	}
+}
+
+var udpsendChan = make(chan []byte, 1024)
+
+func broadMsg(data []byte) {
+	udpsendChan <- data
+}
+
+func init() {
+	fmt.Println("hello init goroutine.....")
+	go udpRecvProc()
+	go udpSendProc()
+
+}
+
+// 完成udp数据发送协程
+func udpSendProc() {
+	con, err := net.DialUDP("udp", nil, &net.UDPAddr{
+		IP:   net.IPv4(192, 168, 0, 255),
+		Port: 3000,
+	})
+	defer con.Close()
+	if err != nil {
+		fmt.Println(err)
+	}
+	for {
+		select {
+		case data := <-udpsendChan:
+			fmt.Println("4、udpSendProc : data : ", string(data))
+			_, err := con.Write(data)
+			if err != nil {
+				fmt.Println(err)
+				return
+			}
+		}
+	}
+
+}
+
+// 完成udp数据接收协程
+func udpRecvProc() {
+	con, err := net.ListenUDP("udp", &net.UDPAddr{
+		IP:   net.IPv4zero,
+		Port: 3000,
+	})
+	if err != nil {
+		fmt.Println(err)
+	}
+	defer con.Close()
+	for {
+		var buf [512]byte
+		n, err := con.Read(buf[0:])
+		if err != nil {
+			fmt.Println(err)
+			return
+		}
+		fmt.Println("udpRecvProc : data : ", string(buf[0:n]))
+		dispatch(buf[0:n])
+	}
+}
+
+// 后端调度逻辑处理
+func dispatch(data []byte) {
+	msg := models.Message{}
+	err := json.Unmarshal(data, &msg)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	switch msg.Type {
+	case 1: //私信
+		fmt.Println("1、dispatch : data : ", string(data))
+		sendMsg(msg.TargetId, data)
+	case 2: //群发
+		sendGroupMsg(msg.TargetId, data)
+	case 3: //广播
+	// sendAllMsg()
+	case 4:
+		//
+	}
+}
+func sendMsg(userId int64, msg []byte) {
+	fmt.Println("2、sendMsg >>> userID : ", userId, "msg :", string(msg))
+	rwLocker.RLock()
+	node, ok := clientMap[userId]
+	rwLocker.RUnlock()
+	if ok {
+		node.DataQueue <- msg
+	}
+}
+
+func sendGroupMsg(targetId int64, msg []byte) {
+	fmt.Println("开始群发消息")
+	userIds := SearchUserByGroupId(uint(targetId))
+	for i := 0; i < len(userIds); i++ {
+		sendMsg(int64(userIds[i]), msg)
+	}
+}
